Fix Firefox scrollbar

--- a/sass/routes/_admin-console.scss
+++ b/sass/routes/_admin-console.scss
@@ -33,6 +33,8 @@
         flex: 1 1 auto;
         padding: 20px;
         margin-right: 5px;
+        scrollbar-color: var(--center-channel-color-32) #fff0;
+        scrollbar-width: thin;
     }
 
     .admin-console__content {
